--- a/style.css
+++ b/style.css
@@ -12,10 +12,11 @@
 }
 
 .header {
+  margin: 5px;
   display: flex;
-  flex-wrp: wrap;
+  flex-wrap: wrap;
   justify-content: space-between;
-  padding:a 0 20px;
+  padding: 0 20px;
   border: 1px solid black;
   align-items: center;
 }
@@ -58,12 +59,17 @@
   cursor: pointer;
 }
 
+.filter-btn {
+  margin: 10px 10px 10px 50px;
+  cursor: pointer;
+}
+
 .res-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 10px;
-  margin: 0 40px;
+  margin: 0 20px;
 }
 
 .res-card {
@@ -89,6 +95,7 @@
 }
 
 .footer {
+  margin: 5px;
   padding: 20px 10px;
   border: 1px solid black;
   margin-top: 50px;
